
##############################################################################
#                                   1.2.0                                    #
##############################################################################
2006-05-05  Piotr Eljasiak  <epiotr@use.pl>

	* Makefile.am:
	Add m4/*.m4 only to EXTRA_DIST (instead of previous the whole m4/)

2006-05-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/main.c:
	Replaced GNOME_PARAM_GOPTION_CONTEXT with GNOME_PARAM_POPT_TABLE to avoid dependency on GNOME-2.14.0

2006-04-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/main.c:
	* src/gnome-cmd-advrename-dialog.h:
	* configure.in:
	Added missing gnome_program_init().

2006-04-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.c:
	* src/gnome-cmd-advrename-dialog.h:
	* src/gnome-cmd-data.c:
	Fixed crash if using broken or non-matching regex pattern in advrename.

2006-04-21  Piotr Eljasiak  <epiotr@use.pl>

	* libgcmd/libgcmd-utils.c:
	* src/gnome-cmd-data.c:
	* src/gnome-cmd-file-selector.c:
	* src/gnome-cmd-ftp-dialog.c:
	* src/libgviewer/text-render.c:
	* src/useractions.c:
	* src/utils.c:
	gcc warnings cleanup.

2006-04-20  Piotr Eljasiak  <epiotr@use.pl>

	* autogen.sh:	Script update.

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO.
	* po/no.po: And the translation.

2006-04-12  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:	Bumped version to 1.2.0

	* mkinstalldirs: Added missing mkinstalldirs

2006-04-11  Remus Boara  <rem@eclipsedesign.net>

	* configure.in:	Added ro to ALL_LINGUAS.

2006-04-10  Piotr Eljasiak  <epiotr@use.pl>

	* BUGS: Added info on bugs submission.

2006-04-03  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-options-dialog.c:
	* src/gnome-cmd-xfer.c:
	* src/utils.c:
	Fixed a few typos in gettext translations.

	* src/gnome-cmd-options-dialog.h:
	Added missing GNOME_CMD_OPTIONS_DIALOG_TAB_CONFIRMATION definition.
