@@ -689,31 +689,15 @@ void
 help_help                           (GtkMenuItem     *menuitem,
                                      gpointer        not_used)
 {
-    gchar *link_id = NULL;
-    GError *error = NULL;
+    gnome_cmd_help_display("gnome-commander.xml",NULL);
+}
 
-    gnome_help_display ("gnome-commander.xml", link_id, &error);
 
-    if (error != NULL)
-    {
-        GtkWidget *dialog;
-
-        dialog = gtk_message_dialog_new (NULL,
-                         GTK_DIALOG_DESTROY_WITH_PARENT,
-                         GTK_MESSAGE_ERROR,
-                         GTK_BUTTONS_CLOSE, 
-                         _("There was an error displaying help."));
-
-        gtk_message_dialog_format_secondary_text (GTK_MESSAGE_DIALOG (dialog), error->message);
-                              
-        g_signal_connect (G_OBJECT (dialog), "response", G_CALLBACK (gtk_widget_destroy), NULL);
-
-        gtk_window_set_resizable (GTK_WINDOW (dialog), FALSE);
-        gtk_widget_show (dialog);
-
-        g_error_free (error);
-    }
-
+void
+help_keyboard                       (GtkMenuItem     *menuitem,
+                                     gpointer        not_used)
+{
+    gnome_cmd_help_display("gnome-commander.xml","gnome-commander-keyboard");
 }
 
 
